# FileVec

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: FileVecConfig.cmake.in  Utility.cmake
src/FileVec/: Block.hpp  BlockQueue.hpp  Header.hpp  Vector.hpp  main.cpp
src/FileVec/collection/: Array.hpp  BaseCollection.cpp  BaseCollection.hpp  Group.cpp  Group.hpp  IArray.cpp  IArray.hpp  VectorGenerator.hpp
src/FileVec/compressors/: AbstractCompressor.hpp  BloscCompressor.hpp  ICompressor.cpp  ICompressor.hpp  NullCompressor.hpp
src/FileVec/data/: Chunk.hpp  ChunkQueue.hpp  Header.cpp  Header.hpp  TempDirectory.cpp  TempDirectory.hpp
src/FileVec/util/: Algorithm.hpp  Bit.hpp  Encoding.hpp  Parsing.hpp  PathUtil.cpp  PathUtil.hpp  Storage.cpp  Storage.hpp
test/: CMakeLists.txt  filevec_test_main.cpp  test_IO.cpp  test_headers.cpp  test_indexMapping.cpp  test_python.cpp  test_storage.cpp
test/cmake/: TestGenConstants.hpp.in
test/data/group/blosc.zarr/: .zarray  0.0
test/data/group/compressionless.zarr/: .zarray  .zattrs  0.0
test/data/group/order-F.zarr/: .zarray  0.0
